the donate line wraps now, this fixes it

--- a/homepage/static/scss/home.scss
+++ b/homepage/static/scss/home.scss
@@ -107,7 +107,7 @@ p {
   blockquote {
     margin: 0 auto;
     padding: 0.5em 0;
-    width: 140px;
+    width: 200px;
 
     a {
       text-decoration: underline;
